--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://control.tscn"]
+open_scenes=["res://Scenes/Player.tscn", "res://vendor.tscn", "res://Scenes/Levels/slime_village.tscn", "res://vendor_ui.tscn", "res://vendor_item.tscn", "res://Scenes/Components/joystick.tscn", "res://game_over.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/control.gd", "res://Scripts/Enemy.gd", "res://Scripts/Spawner.gd"]
+open_scripts=["res://Scripts/control.gd", "res://Scripts/Enemy.gd", "res://game_over.gd", "res://Globals.gd", "res://Joystick.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
 open_help=["NavigationAgent2D"]
 script_split_offset=140
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
