--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,6 +3,7 @@
 name="Todd The slime Slayer test"
 platform="Android"
 runnable=true
+dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="Sprites/*,Saves/*"
@@ -12,17 +13,16 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-custom_build/use_custom_build=false
-custom_build/export_format=0
-custom_build/min_sdk=""
-custom_build/target_sdk=""
+gradle_build/use_gradle_build=true
+gradle_build/export_format=0
+gradle_build/min_sdk="24"
+gradle_build/target_sdk=""
 architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
@@ -35,8 +35,8 @@ keystore/release_user=""
 keystore/release_password=""
 version/code=1
 version/name="1.0"
-package/unique_name="org.godotengine.$genname"
-package/name=""
+package/unique_name="com.solidgames.toddtheslimeslayer"
+package/name="Todd the slime slayer"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
