feat: draft popup vendor menu

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Player.tscn", "res://vendor.tscn", "res://Scenes/Levels/slime_village.tscn", "res://vendor_ui.tscn", "res://vendor_item.tscn", "res://Scenes/Components/joystick.tscn", "res://game_over.tscn"]
+open_scenes=["res://Scenes/Player.tscn", "res://vendor.tscn", "res://Scenes/Levels/slime_village.tscn", "res://vendor_ui.tscn", "res://vendor_item.tscn", "res://Scenes/Components/joystick.tscn", "res://game_over.tscn", "res://Scenes/GameplayUI.tscn", "res://tile_map.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/control.gd", "res://Scripts/Enemy.gd", "res://game_over.gd", "res://Globals.gd", "res://Joystick.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
-open_help=["NavigationAgent2D"]
+open_scripts=["res://Scripts/control.gd", "res://Scripts/Enemy.gd", "res://game_over.gd", "res://Globals.gd", "res://Joystick.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://Scenes/UI.gd", "res://vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
+open_help=["@GlobalScope", "NavigationAgent2D", "Node"]
 script_split_offset=140
 list_split_offset=0
 
