--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Control",
+"class": &"GameplayUI",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/UI.gd"
+}, {
 "base": &"Area2D",
 "class": &"Joystick",
 "icon": "",
