--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Player.tscn", "res://vendor.tscn", "res://vendor_ui.tscn", "res://vendor_item.tscn", "res://Scenes/Components/joystick.tscn", "res://game_over.tscn", "res://Scenes/GameplayUI.tscn", "res://tile_map.tscn", "res://Scenes/Levels/slime_village.tscn", "res://control.tscn"]
+open_scenes=["res://Scenes/Player.tscn", "res://vendor.tscn", "res://vendor_ui.tscn", "res://vendor_item.tscn", "res://Scenes/Components/joystick.tscn", "res://Scenes/GameplayUI.tscn", "res://tile_map.tscn", "res://Scenes/Levels/slime_village.tscn", "res://Scenes/Weapons/Swords/sword.tscn"]
 
 [ScriptEditor]
 
