--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/UI.gd"
 }, {
+"base": &"Resource",
+"class": &"GlobalsData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GlobalsData.gd"
+}, {
 "base": &"Area2D",
 "class": &"Joystick",
 "icon": "",
@@ -23,8 +29,8 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://VelocityComponent.gd"
 }, {
-"base": &"Node2D",
-"class": &"weapon",
+"base": &"Resource",
+"class": &"Weapon",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/Weapons/base_weapon.gd"
