--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=270
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,21 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Player.tscn", "res://vendor.tscn", "res://vendor_ui.tscn", "res://vendor_item.tscn", "res://Scenes/Components/joystick.tscn", "res://Scenes/GameplayUI.tscn", "res://tile_map.tscn", "res://Scenes/Levels/slime_village.tscn", "res://Scenes/Weapons/Swords/sword.tscn"]
+open_scenes=["res://control.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/control.gd", "res://Scripts/Enemy.gd", "res://game_over.gd", "res://Globals.gd", "res://Joystick.gd", "res://Scripts/main.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://Scenes/Levels/Teleport.gd", "res://Scenes/UI.gd", "res://vendor.gd", "res://Scripts/Vendors/vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
-open_help=["@GlobalScope", "DirAccess", "NavigationAgent2D", "Node"]
-script_split_offset=140
+open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
+open_help=[]
+script_split_offset=70
 list_split_offset=0
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=true
-log_filter_3=true
-log_filter_4=true
-collapse=false
-show_search=true
