--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,13 +23,19 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://LevelButton.gd"
 }, {
+"base": &"Weapon",
+"class": &"Sword",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Sword.gd"
+}, {
 "base": &"Node2D",
 "class": &"VelocityComponent",
 "icon": "",
 "language": &"GDScript",
 "path": "res://VelocityComponent.gd"
 }, {
-"base": &"Resource",
+"base": &"Node2D",
 "class": &"Weapon",
 "icon": "",
 "language": &"GDScript",
