--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-637
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://control.tscn", "res://vendor_item.tscn", "res://Scenes/Buildings/Vendor.tscn", "res://vendor_ui.tscn"]
+open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Weapons/Swords/sword.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Scripts/Player.gd", "res://Sword.gd", "res://Scripts/Vendors/vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
-open_help=["FileAccess"]
+open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Scripts/Player.gd", "res://Sword.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
+open_help=["@GDScript", "@GlobalScope", "PackedScene", "Resource"]
 script_split_offset=70
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
