--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-740
+dock_hsplit_3=-560
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Weapons/Swords/sword.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn", "res://Scenes/Components/damage_container.tscn", "res://loot.tscn"]
+open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Weapons/Swords/sword.tscn", "res://loot.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://Scenes/Components/damage_container.gd", "res://DBManager.gd", "res://Scripts/enemy.gd", "res://Scripts/Enemy.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Loot.gd", "res://Scripts/Player.gd", "res://Sword.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
-open_help=["@GDScript", "@GlobalScope", "PackedScene", "Resource"]
+open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Loot.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
+open_help=["@GDScript", "@GlobalScope", "Array", "PackedScene", "Resource"]
 script_split_offset=70
 list_split_offset=0
 
