feat: inventory draft

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=561
 dock_hsplit_3=-560
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Weapons/Swords/sword.tscn", "res://loot.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn"]
+open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Loot.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
+open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Resources/enemy_data.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Resources/inventory.gd", "res://loot.gd", "res://Resources/loot_data.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://VendorUI.gd", "res://vendor_item.gd"]
 open_help=["@GDScript", "@GlobalScope", "Array", "PackedScene", "Resource"]
 script_split_offset=70
 list_split_offset=0
