--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Components/damage_container.gd"
 }, {
+"base": &"Resource",
+"class": &"Enemy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Resources/enemy_data.gd"
+}, {
 "base": &"Control",
 "class": &"GameplayUI",
 "icon": "",
@@ -16,6 +22,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://GlobalsData.gd"
+}, {
+"base": &"Resource",
+"class": &"Inventory",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Resources/inventory.gd"
 }, {
 "base": &"Area2D",
 "class": &"Joystick",
@@ -29,11 +41,11 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://LevelButton.gd"
 }, {
-"base": &"Node2D",
+"base": &"Resource",
 "class": &"Loot",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Loot.gd"
+"path": "res://Resources/loot_data.gd"
 }, {
 "base": &"Node2D",
 "class": &"VelocityComponent",
