--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 24.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([]),
+"column": 15,
+"folded_lines": Array[int]([7]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 15.0,
+"row": 25,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 100,
-"scroll_position": 74.0,
+"row": 89,
+"scroll_position": 78.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,11 +101,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 54,
-"scroll_position": 0.0,
+"row": 63,
+"scroll_position": 47.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,11 +115,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 10,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -199,11 +199,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 44,
-"scroll_position": 0.0,
+"h_scroll_position": 24,
+"row": 53,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -216,7 +216,7 @@ state={
 "column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -240,15 +240,57 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Loot.gd]
+[res://loot.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
+"row": 7,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Resources/loot_data.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Resources/enemy_data.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 11,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 2.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Resources/inventory.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 7,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
