--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -47,7 +47,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://LevelButton.gd"
 }, {
-"base": &"Item",
+"base": &"Resource",
 "class": &"Loot",
 "icon": "",
 "language": &"GDScript",
