fix: calibrate noise parameters

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -309,12 +309,8 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 36,
-"scroll_position": 22.0,
-"selection": true,
-"selection_from_column": 11,
-"selection_from_line": 36,
-"selection_to_column": 20,
-"selection_to_line": 36,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -337,11 +333,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 67,
+"column": 45,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 397,
-"row": 51,
-"scroll_position": 45.0,
+"h_scroll_position": 0,
+"row": 65,
+"scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
