feat: adds custom sprites feat: adds custom terrain feat: first auto generated world level

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/chest.tscn", "res://world_generator.tscn"]
+open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/chest.tscn", "res://world_generator.tscn", "res://Scenes/Levels/random_generated.tscn"]
 
 [ScriptEditor]
 
