--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 24,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 123,
-"scroll_position": 113.0,
-"selection": true,
-"selection_from_column": 34,
-"selection_from_line": 123,
-"selection_to_column": 49,
-"selection_to_line": 123,
+"h_scroll_position": 72,
+"row": 14,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,7 +91,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 89,
-"scroll_position": 78.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,12 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 36,
-"row": 63,
-"scroll_position": 45.0,
-"selection": false,
+"column": 0,
+"folded_lines": Array[int]([43]),
+"h_scroll_position": 0,
+"row": 45,
+"scroll_position": 36.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 45,
+"selection_to_column": 9,
+"selection_to_line": 48,
 "syntax_highlighter": "GDScript"
 }
 
@@ -147,11 +147,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 0.0,
+"row": 52,
+"scroll_position": 32.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -175,10 +175,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 25,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -249,11 +249,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 9,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 14,
-"scroll_position": 8.0,
+"h_scroll_position": 60,
+"row": 21,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -281,7 +281,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 13,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -305,11 +305,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 0.0,
+"row": 51,
+"scroll_position": 32.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -335,9 +335,37 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 3,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 51,
 "row": 88,
-"scroll_position": 31.0,
+"scroll_position": 78.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://Loot.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 17.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Sprites/SpritesGUI_Essential_Free/Complete_GUI_Essential_Pack_Free_Version/License.txt]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
 }
