feat: adds inventory logic

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 32,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 72,
-"row": 14,
-"scroll_position": 6.0,
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
-"folded_lines": Array[int]([7]),
+"column": 27,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -87,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 89,
-"scroll_position": 0.0,
+"row": 57,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,15 +101,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([43]),
+"column": 19,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 36.0,
+"row": 48,
+"scroll_position": 29.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 45,
-"selection_to_column": 9,
+"selection_from_column": 9,
+"selection_from_line": 48,
+"selection_to_column": 19,
 "selection_to_line": 48,
 "syntax_highlighter": "GDScript"
 }
@@ -147,11 +147,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 32.0,
+"row": 59,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -175,10 +175,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 23,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -207,7 +207,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 24,
 "row": 53,
-"scroll_position": 36.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -217,10 +217,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -231,16 +231,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 45,
+"row": 31,
 "scroll_position": 9.0,
 "selection": true,
-"selection_from_column": 8,
-"selection_from_line": 45,
-"selection_to_column": 14,
-"selection_to_line": 45,
+"selection_from_column": 5,
+"selection_from_line": 31,
+"selection_to_column": 16,
+"selection_to_line": 31,
 "syntax_highlighter": "GDScript"
 }
 
@@ -249,11 +249,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 40,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 60,
-"row": 21,
-"scroll_position": 3.0,
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -263,10 +263,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -281,7 +281,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 13,
-"scroll_position": 0.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -291,12 +291,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 8,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 8,
+"selection_to_column": 22,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
 
@@ -305,11 +309,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 32.0,
+"row": 41,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -319,11 +323,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 4.0,
+"row": 5,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -333,30 +337,44 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 51,
-"row": 88,
-"scroll_position": 78.0,
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Loot.gd]
+[res://inventory_ui.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 17.0,
+"row": 47,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Sprites/SpritesGUI_Essential_Free/Complete_GUI_Essential_Pack_Free_Version/License.txt]
+[res://inventory_slot.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://LevelButton.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -364,8 +382,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Plain Text"
+"syntax_highlighter": "GDScript"
 }
