--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=561
-dock_hsplit_3=-464
+dock_hsplit_3=-725
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://control.tscn", "res://Scenes/Player.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/chest.tscn", "res://world_generator.tscn", "res://Scenes/Levels/random_generated.tscn", "res://Scenes/GameplayUI.tscn", "res://vendor_ui.tscn", "res://inventory_ui.tscn"]
+open_scenes=["res://Scenes/GameplayUI.tscn", "res://inventory_ui.tscn", "res://inventory_slot.tscn", "res://loot.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Chest.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Resources/enemy_data.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Resources/inventory.gd", "res://Resources/item_data.gd", "res://Sprites/SpritesGUI_Essential_Free/Complete_GUI_Essential_Pack_Free_Version/License.txt", "res://loot.gd", "res://Loot.gd", "res://Resources/loot_data.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://Scenes/UI.gd", "res://VendorUI.gd", "res://vendor_item.gd", "res://WorldGenerator.gd"]
-open_help=["@GDScript", "@GlobalScope", "Array", "Noise", "PackedScene", "Resource", "TileMap"]
+open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Chest.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Resources/enemy_data.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Resources/inventory.gd", "res://inventory_slot.gd", "res://inventory_ui.gd", "res://Resources/item_data.gd", "res://LevelButton.gd", "res://loot.gd", "res://Resources/loot_data.gd", "res://Scripts/Player.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://Scenes/UI.gd", "res://VendorUI.gd", "res://vendor_item.gd", "res://WorldGenerator.gd"]
+open_help=["@GDScript", "@GlobalScope", "Array", "Noise", "PackedScene", "Resource", "RigidBody2D", "TileMap"]
 script_split_offset=70
 list_split_offset=0
 
