--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -59,11 +59,23 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Resources/power_up.gd"
 }, {
+"base": &"MarginContainer",
+"class": &"Snackbar",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Snackbar.gd"
+}, {
 "base": &"Node2D",
 "class": &"VelocityComponent",
 "icon": "",
 "language": &"GDScript",
 "path": "res://VelocityComponent.gd"
+}, {
+"base": &"Control",
+"class": &"VendorUI",
+"icon": "",
+"language": &"GDScript",
+"path": "res://VendorUI.gd"
 }, {
 "base": &"Resource",
 "class": &"Weapon",
