--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/LevelsMenu/levels_ui.tscn", "res://LevelButton.tscn", "res://inventory_ui.tscn", "res://node_2d.tscn", "res://Scenes/GameplayUI.tscn", "res://vendor_item.tscn", "res://snackbar.tscn", "res://vendor_ui.tscn", "res://vendor.tscn", "res://Scenes/Levels/slime_village.tscn", "res://Scenes/Player.tscn"]
+open_scenes=["res://Scenes/Player.tscn", "res://Scenes/chest.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/slime_village.tscn", "res://test.tscn", "res://world_generator.tscn", "res://tile_map.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Chest.gd", "res://Scripts/control.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Resources/enemy_data.gd", "res://addons/autotile_generator_4/gen_dock.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Resources/inventory.gd", "res://inventory_slot.gd", "res://inventory_ui.gd", "res://Resources/item_data.gd", "res://LevelButton.gd", "res://Scenes/LevelsMenu/levels_ui.gd", "res://loot.gd", "res://Resources/loot_data.gd", "res://Ocean.gd", "res://options.gd", "res://Scenes/OptionsMenu.gd", "res://Scenes/PauseLabel.gd", "res://Scripts/Player.gd", "res://Snackbar.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://Scenes/UI.gd", "res://Scripts/Vendors/vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd", "res://WorldGenerator.gd"]
-open_help=["@GDScript", "@GlobalScope", "Array", "CanvasItem", "Geometry2D", "Noise", "PackedScene", "Polygon2D", "Resource", "RigidBody2D", "TileMap"]
+open_scripts=["res://Scripts/Weapons/base_weapon.gd", "res://Chest.gd", "res://Scripts/control.gd", "res://CustomConfirmationDialog.gd", "res://DBManager.gd", "res://Scripts/Enemy.gd", "res://Resources/enemy_data.gd", "res://addons/autotile_generator_4/gen_dock.gd", "res://Globals.gd", "res://GlobalsData.gd", "res://Resources/inventory.gd", "res://inventory_slot.gd", "res://inventory_ui.gd", "res://Resources/item_data.gd", "res://LevelButton.gd", "res://Scenes/LevelsMenu/levels_ui.gd", "res://loot.gd", "res://Resources/loot_data.gd", "res://Ocean.gd", "res://options.gd", "res://Scenes/OptionsMenu.gd", "res://Scenes/PauseLabel.gd", "res://Scripts/Player.gd", "res://Snackbar.gd", "res://Scripts/Spawner.gd", "res://Sword.gd", "res://Scenes/UI.gd", "res://Scripts/Vendors/vendor.gd", "res://VendorUI.gd", "res://vendor_item.gd", "res://WorldGenerator.gd"]
+open_help=["@GDScript", "@GlobalScope", "Array", "CanvasItem", "Geometry2D", "Node2D", "Noise", "PackedScene", "Polygon2D", "Resource", "RigidBody2D", "TileMap"]
 script_split_offset=70
 list_split_offset=0
 
