--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Player.tscn", "res://Scenes/chest.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/slime_village.tscn", "res://test.tscn", "res://world_generator.tscn", "res://tile_map.tscn"]
+open_scenes=["res://Scenes/Player.tscn", "res://Scenes/chest.tscn", "res://loot.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/slime_village.tscn", "res://test.tscn", "res://world_generator.tscn", "res://tile_map.tscn", "res://Scenes/Enemies/Slimes/Slime.tscn"]
 
 [ScriptEditor]
 
