fix: fixes world generation

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,16 +7,32 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=529
-dock_hsplit_3=-444
+dock_hsplit_2=218
+dock_hsplit_3=-216
 dock_hsplit_4=0
+dock_1_selected_tab_idx=0
+dock_2_selected_tab_idx=0
+dock_3_selected_tab_idx=0
+dock_4_selected_tab_idx=0
+dock_5_selected_tab_idx=0
+dock_6_selected_tab_idx=0
+dock_7_selected_tab_idx=0
+dock_8_selected_tab_idx=0
+dock_floating={}
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Levels/random_generate_threaded.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Scenes/Levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Scenes/Levels/slime_village.tscn", "res://Scenes/UI/GameplayUI.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Levels/random_generated.tscn", "res://Scenes/WorldGenerator/world_generator.tscn", "res://Scenes/UI/LevelsMenu/levels_ui.tscn", "res://Scenes/UI/LevelsMenu/LevelButton.tscn", "res://Scenes/Globals/globals.tscn", "res://Scenes/Load/load.tscn", "res://Scenes/Globals/SceneManager.tscn", "res://Scenes/tile_map.tscn"]
+open_scenes=PackedStringArray("res://Scenes/Levels/slime_village.tscn", "res://Scenes/UI/GameplayUI.tscn", "res://Scenes/Player/Player.tscn", "res://Scenes/Levels/random_generate_threaded.tscn", "res://Scenes/WorldGenerator/world_generator.tscn", "res://Scenes/UI/LevelsMenu/levels_ui.tscn", "res://Scenes/UI/LevelsMenu/LevelButton.tscn", "res://Scenes/Globals/globals.tscn", "res://Scenes/Load/load.tscn", "res://Scenes/Globals/SceneManager.tscn", "res://Scenes/tile_map.tscn", "res://Scenes/Levels/level_1.tscn")
+current_scene="res://Scenes/Levels/level_1.tscn"
+center_split_offset=-286
+selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
@@ -24,6 +40,7 @@ open_scripts=["res://addons/autotile_generator_4/autotile_generator_4.gd", "res:
 open_help=["@GDScript", "@GlobalScope", "Array", "Callable", "CanvasItem", "Geometry2D", "Node2D", "Noise", "PackedScene", "Polygon2D", "Resource", "ResourceLoader", "RigidBody2D", "Thread", "TileMap"]
 script_split_offset=70
 list_split_offset=0
+selected_script="res://Scenes/Globals/SceneManager.gd"
 
 [editor_log]
 
@@ -34,3 +51,9 @@ log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
+
+[ShaderEditor]
+
+open_shaders=[]
+split_offset=0
+selected_shader=""
